--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "4.1.0",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.barracuda": "3.0.0",
     "com.unity.burst": "1.8.18",
